# Multiprocess-filesystem

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.build/: CMakeCache.txt  Makefile  client  cmake_install.cmake  manager  mfs  test_core_utils  test_manager_lib
client/: client.cpp
client2/: client2.cpp
libraries/client/: Handler.h  lib.cpp  lib.hpp  sync.hpp
libraries/core/: sync.cpp  sync.hpp  utils.cpp  utils.hpp
libraries/management/: lib.hpp
libraries/manager/: lib.cpp  lib.hpp  sync.hpp
management/: manager.cpp
manager/: manager.cpp
tests/: sync_client_tests.cpp  test_core_sync.cpp  test_core_utils.cpp  test_manager_lib.cpp
